--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 twitter_username: churchofwifi
 minimal_mistakes_skin: default
 search: true
+repository: DEFCON-MUD/DEFCON-MUD
 
 # Build settings
 markdown: kramdown
