--- a/_config.yml
+++ b/_config.yml
@@ -13,95 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Church of WiFi
-email:
-description: >- # this means to ignore newlines until "baseurl:"
-  This is a shifty website about a shifty church :)
-twitter_username: churchofwifi
-minimal_mistakes_skin: default
-search: true
+
+header_pages:
+  - index.md
+  - about.md
+
+style: dark # dark (default), light or hacker
+listen_for_clients_preferred_style: true # false (default) or true
+
+footer: 'follow us on <a href="https://twitter.com/churchofwifi">twitter</a>'
+
 repository: DEFCON-MUD/DEFCON-MUD
-
-# Build settings
-markdown: kramdown
-remote_theme: b2a3e8/jekyll-theme-console
-# Outputting
-permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
-paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-
-include:
-  - _pages
-
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
-
-# Plugins (previously gems:)
-plugins:
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-gist
-  - jekyll-feed
-  - jemoji
-  - jekyll-include-cache
-
-author:
-  name   : "Church of Wifi"
-  avatar : "/assets/images/bio-photo.jpg"
-  bio    : "A shifty Church for Shifty People."
-  links:
-    - label: "ChurchofWifi"
-      icon: "fas fa-fw fa-link fa-twitter-square"
-      url: "https://twitter.com/churchofwifi"
-    - label: "EvilMog"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/evil_mog"
-    - label: "RenderMan"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/ihackedwhat"
-
-footer:
-  links:
-    - label: "Church Of Wifi"
-      icon: "fas fa-fw fa-link"
-      url: "https://churchofwifi.org"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/churchofwifi"
-
-defaults:
-  # _posts
-  - scope:
-      path: ""
-      type: posts
-    values:
-      layout: single
-      author_profile: true
-      read_time: true
-      comments: true
-      share: true
-      related: true
-  # _pages
-  - scope:
-      path: "_pages"
-      type: pages
-    values:
-      layout: single
-      author_profile: true
-
-category_archive:
-  type: liquid
-  path: /categories/
-tag_archive:
-  type: liquid
-  path: /tags/
