--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,20 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+title: 'Church of Wifi'
+description: "a shifty church for shifty people"
+baseurl: "/"
+url: "https://churchofwifi.org"
 
 header_pages:
   - index.md
   - about.md
+  - contact.md
 
-style: dark # dark (default), light or hacker
-listen_for_clients_preferred_style: true # false (default) or true
+style: dark
 
-footer: 'follow us on <a href="https://twitter.com/churchofwifi">twitter</a>'
+footer: 'follow us on <a href="https://twitter.com/churchofwifi.org">twitter</a>'
 
+# Build settings
+markdown: kramdown
+remote_theme: b2a3e8/jekyll-theme-console
+
+# github setting
 repository: DEFCON-MUD/DEFCON-MUD
